--- a/.github/workflows/gcp_agent.yml
+++ b/.github/workflows/gcp_agent.yml
@@ -57,7 +57,7 @@ jobs:
           --platform "managed" \
           --service-account $SERVICE_ACCOUNT_EMAIL \
           --port 5000 \
-          --set-env-vars PROJECT_ID=$PROJECT_ID,REGION=$REGION,APP_NAME=$APP_NAME,REGISTRY_NAME=$REGISTRY_NAME,SERVICE_ACCOUNT_EMAIL=$SERVICE_ACCOUNT_EMAIL,GOOGLE_APPLICATION_CREDENTIALS=$GOOGLE_APPLICATION_CREDENTIALS,GOOGLE_DRIVE_CREDENTIALS=$GOOGLE_DRIVE_CREDENTIALS,STAGING_BUCKET=$STAGING_BUCKET \
+          --set-env-vars PROJECT_ID=$PROJECT_ID,REGION=$REGION,APP_NAME=$APP_NAME,REGISTRY_NAME=$REGISTRY_NAME,SERVICE_ACCOUNT_EMAIL=$SERVICE_ACCOUNT_EMAIL,STAGING_BUCKET=$STAGING_BUCKET \
           --quiet
 
       - name: Hacer el servicio público (Permitir invocaciones no autenticadas)
